Typo in Conditions.md
"worry getting caught" -> "worry about getting caught"

--- a/Conditions.Rmd
+++ b/Conditions.Rmd
@@ -504,7 +504,7 @@ withCallingHandlers(
 )
 ```
 
-Handlers are applied in order, so you don't need to worry getting caught in an infinite loop. In the following example, the `message()` signalled by the handler doesn't also get caught:
+Handlers are applied in order, so you don't need to worry about getting caught in an infinite loop. In the following example, the `message()` signalled by the handler doesn't also get caught:
 
 ```{r}
 withCallingHandlers(
